force-app/main/default/objects/sun_Product_Country_Attributes__c/fields/sun_Assortment_Type__c.field-meta.xml
<CustomField>
    <fullName>sun_Assortment_Type__c</fullName>
    <label>Assortment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sun_Assortment_Type</valueSetName>
    </valueSet>
</CustomField>