force-app/main/default/objects/sun_Product_Country_Attributes__c/fields/sun_Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>sun_Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>