force-app/main/default/objects/sun_Product_Country_Attributes__c/fields/sun_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>sun_Lead_Time__c</fullName>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>