force-app/main/default/objects/sun_Product_Country_Attributes__c/fields/sun_Product__c.field-meta.xml
<CustomField>
    <fullName>sun_Product__c</fullName>
    <label>CC Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>B2B Product Country Attributes</relationshipLabel>
    <relationshipName>sun_Product_Country_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>