force-app/main/default/objects/sun_Product_Country_Attributes__c/fields/sun_Product_Country_Attributes_Id__c.field-meta.xml
<CustomField>
    <fullName>sun_Product_Country_Attributes_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Country Attributes Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>